examples/test/testpolicy9922.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9922
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key16: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value42
          key28: value42
      podSelector:
        matchLabels:
          key0: value31
          key35: value18
          key9: value28
